[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/popups/popup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/popups/purchase.gd" type="Script" id=2]
[ext_resource path="res://images/popups/common_popup.png" type="Texture" id=3]
[ext_resource path="res://fonts/effloresce.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://images/popups/exit_button.png" type="Texture" id=5]
[ext_resource path="res://images/popups/exit_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://scenes/other/go_back.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]

resource_name = "close_form"
length = 0.12
loop = false
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("window/go_back")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disappear"
} ]
}

[sub_resource type="Animation" id=2]

resource_name = "load_form"
length = 0.12
loop = false
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("window/go_back")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}

[sub_resource type="DynamicFont" id=3]

size = 42
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="GDScript" id=4]

script/source = "extends Label

#func _ready():
#	set_text(game.lang.ERROR9)
"

[sub_resource type="GDScript" id=5]

script/source = "extends TextureButton


func set_price(price):
	$text.set_text(\"Get it for \" + str(price))
"

[node name="purchase" index="0" groups=[
"resizable",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
_sections_unfolded = [ "Mouse", "Pause", "Script", "Transform" ]

[node name="animation" parent="." index="0"]
anims/close_form = SubResource( 1 )
anims/load_form = SubResource( 2 )

[node name="clickable_space" parent="." index="1"]
visible = false

[node name="window" parent="." index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -425.5
margin_right = 410.0
margin_bottom = 425.5
rect_pivot_offset = Vector2( 410, 425 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Mouse", "Pause", "Rect", "Transform", "Visibility" ]

[node name="text" type="Label" parent="window" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 74.0
margin_top = 124.0
margin_right = -75.0
margin_bottom = -220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Buy Ad Free version."
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = SubResource( 4 )
_sections_unfolded = [ "Custom Colors", "Custom Constants", "Custom Fonts", "Script", "custom_fonts", "custom_fonts/font" ]

[node name="ok" type="TextureButton" parent="window" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = 68.0
margin_right = 201.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = SubResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="text" type="Label" parent="window/ok" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.223529, 0.54902, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Get it for"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="already_owned" type="Button" parent="window" index="2"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.0
margin_top = 225.0
margin_right = 259.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="text" type="Label" parent="window/already_owned" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "I already bought this"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts", "custom_fonts/font" ]

[node name="go_back" parent="window" index="3" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_right = 0.0
margin_bottom = 0.0
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="timer" type="Timer" parent="." index="3"]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="pressed" from="window/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="window/already_owned" to="." method="_on_already_owned_pressed"]
[connection signal="pressed" from="window/go_back" to="." method="_on_go_back_pressed"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
